[package]
name = "tic-tac-toe_multiplayer"
version = "0.1.0"
authors = ["Lukas Hazen-Bushbaker <hazenluk@umich.edu>"]
edition = "2018"
description = "A first attempt at writing a TCP server/client in Rust"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.55"

